--- a/gradle.properties
+++ b/gradle.properties
@@ -42,18 +42,18 @@ mapping_version=1.20.1
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=jlme
+mod_id=pml
 # The human-readable display name for the mod.
-mod_name=Just a lot more enchantments
+mod_name=Progressive Mechanics Library
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=1.20.1forge-ver1.3.0fix
+mod_version=1.0.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.kettle.jlme
+mod_group_id=com.kettle.pml
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=Kettle5000(a teapot orbiting the sun)
+mod_authors=Kettle5000
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Adds a lot of extra enchantments to the game.
+mod_description=Library mod for progressive tweaks and extra mods. Greatly enhances control to specific damage mechanics.
